--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,17 @@ a.nav-link {
 .about-info {
   flex-basis: 75%;
 }
+
+@media screen and (max-width: 420px) {
+  .projects {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex-basis: 25%;
+  }
+
+  .projectImage {
+    height: 200px;
+    width: 350px;
+  }
+}
